add validate when recieve post

--- a/oiegg/templates/pattern.html
+++ b/oiegg/templates/pattern.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Pattern</title>
-    <script src="/static/jquery-1.9.1.min.js"></script>
-    <script src="/static/pattern.js"></script>
+    <script src="/static/js/jquery-1.9.1.min.js"></script>
+    <script src="/static/js/pattern.js"></script>
 </head>
 <body>
 <div>
