change qr image

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <div>
-        <div id="qr" style="width: 427px;margin: auto auto;padding-top: 32px"><a href="http://www.oiegg.com/viewthread.php?tid=1272224"><img src="/static/img/qr.jpg"></a></div>
+        <div id="qr" style="width: 344px;margin: auto auto;padding-top: 32px">
+            <a href="http://www.oiegg.com/viewthread.php?tid=1272224"><img src="/static/img/qr.jpg"></a>
+        </div>
     </div>
 </body>
 </html>
